# Wzy_Analysis

./: .gitattributes  README.md  pyproject.toml  wzy_info.txt
foldseek/: search_tmscores.tsv
from_JK/: Acinetobacter_Wzy.xlsx  WzyA.faa  WzyB.faa  WzyC.faa  ligases.faa
hmms/: WzyA_reduced.hmm  WzyA_trimmed.hmm  WzyB_reduced.hmm  WzyB_trimmed.hmm  WzyC_reduced.hmm  WzyC_trimmed.hmm
notebooks/: associative_stats.html  associative_stats.ipynb  helpers.py  hmm_construction.html  hmm_construction.ipynb  stats_helpers.py  structure_analysis.html  structure_analysis.ipynb  wzy_clustering.ipynb
results/: hmm_metrics.csv.zst  linkage_data_stats_significant.csv  linkage_data_stats_significant.csv.zst  structural_clustering_results.csv  structural_clustering_results.csv.zst  structure_truths.csv  structure_truths.csv.zst  summary_confidences.csv  summary_confidences.csv.zst  truth_hmmsearch_results.csv  truth_hmmsearch_results.csv.zst
scripts/: generate_af3_json.py  merizo_search_submit.py
